--- a/css/style.css
+++ b/css/style.css
@@ -224,11 +224,15 @@ a,
      transition: all .3s ease-in-out;
 }
 
+
 img {
+     display: block;
+     margin: 0 auto;
      max-width: 100%;
      height: auto;
-}
+ }
 
+ 
  :focus {
      outline: 0;
 }
